--- a/Presentacion/Views/DentistView.xaml
+++ b/Presentacion/Views/DentistView.xaml
@@ -15,13 +15,19 @@
         <!-- Sidebar Dentista (Color Azul Médico) -->
         <Border Grid.Column="0" Background="#3498DB">
             <StackPanel Margin="10">
-                <TextBlock Text="Dr. Perfil" Foreground="White" FontSize="18" FontWeight="Bold" Margin="0,20,0,10" HorizontalAlignment="Center"/>
-                <TextBlock Text="Odontología General" Foreground="#D6EAF8" FontSize="12" HorizontalAlignment="Center" Margin="0,0,0,30"/>
+                <Button Width="30" Height="30" Background="Transparent" Foreground="White" BorderThickness="0" FontWeight="Bold" FontSize="16" Cursor="Hand"
+                        HorizontalAlignment="Right" Margin="0,10,0,0">
+                    <Image Source="pack://application:,,,/assets/icons/dashboard.png" Stretch="Uniform"/>
+                </Button>
+                <Image Source="pack://application:,,,/assets/icons/person.png" Width="60" Height="66" HorizontalAlignment="Center" Margin="0,20,0,10"/>
+
+                <TextBlock Text="Dr. Perfil" Foreground="White" FontSize="14" FontWeight="Bold" Margin="0,5,0,10" HorizontalAlignment="Center"/>
+                <TextBlock Text="Odontología General" Foreground="#D6EAF8" FontSize="12" HorizontalAlignment="Center" Margin="0,0,0,10"/>
 
                 <Button Content="Mi Agenda Hoy" Height="40" Margin="0,5" Background="#2980B9" Foreground="White" BorderThickness="0"/>
                 <Button Content="Mis Pacientes" Height="40" Margin="0,5" Background="Transparent" Foreground="White" BorderThickness="0"/>
                 <Button Content="Tratamientos" Height="40" Margin="0,5" Background="Transparent" Foreground="White" BorderThickness="0"/>
-                <Button Content="Odontograma" Height="40" Margin="0,5" Background="Transparent" Foreground="White" BorderThickness="0"/>
+                <Button Content="Cerrar Sesion" Height="40" Margin="0,5" Click="BtnCerrarSesionClick" Background="Transparent" Foreground="White" BorderThickness="0"/>
             </StackPanel>
         </Border>
 
